--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ main{
 	background-color: white;
 	border-radius: 1rem;
 	margin: 5rem 20rem 5rem 20rem;
+	max-width: 30%;
+	min-width: 30%;
+	min-height: 35%;
+	overflow: hidden;
 }
 
 header img{
