--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 	background-color: hsl(225, 100%, 94%);
 	text-align: center;
 	font-size: 16px;
+	font-family: 'Red Hat Display', 'Courier New', Courier, monospace;
 }
 
 main{
@@ -51,9 +52,10 @@ section{
 }
 
 .plan *{
-	margin: 0rem;
+	display: inline;
+	margin: auto;
 }
 
-.plan img{
-	position: absolute left;
+.shadow{
+	box-shadow: 10px 5px 5px black;
 }
