--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ main{
 	margin: auto;
 	margin-top: 3rem;
 	margin-bottom: 5rem;
-	max-width: 400px;
+	max-width: 450px;
 	min-width: 135px;
 	min-height: 400px;
+	max-height: 600px;
 	overflow: hidden;
 }
 
@@ -32,6 +33,8 @@ header img{
 .plan{
 	background-color: hsl(225, 100%, 98%);
 	border-radius: 1rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 #payment{
@@ -53,9 +56,14 @@ section{
 
 .plan *{
 	display: inline;
-	margin: auto;
+	vertical-align: middle;
 }
 
-.shadow{
-	box-shadow: 10px 5px 5px black;
+.text *{
+	margin: 0;
+}
+
+.plan a{
+	text-align: right;
+	margin-left: 2rem;
 }
