--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main{
 	margin: auto;
 	margin-top: 3rem;
 	margin-bottom: 5rem;
-	max-width: 450px;
+	max-width: 375px;
 	min-width: 135px;
 	min-height: 400px;
 	max-height: 600px;
@@ -35,6 +35,7 @@ header img{
 	border-radius: 1rem;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+	min-height: 50px;
 }
 
 #payment{
@@ -54,16 +55,19 @@ section{
 	font-weight: bold;
 }
 
-.plan *{
-	display: inline;
+.plan img, .plan .text, .plan a{
+	display: inline-block;
 	vertical-align: middle;
+}
+
+.plan .text{
+	padding-right: 3rem;
+}
+
+.plan img{
+	padding-right: 1rem;
 }
 
 .text *{
 	margin: 0;
-}
-
-.plan a{
-	text-align: right;
-	margin-left: 2rem;
 }
