--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main{
 	background-color: white;
 	border-radius: 1rem;
 	margin: auto;
-	margin-top: 3rem;
+	margin-top: 4rem;
 	margin-bottom: 5rem;
 	max-width: 375px;
 	min-width: 135px;
@@ -44,12 +44,18 @@ header img{
 	border-radius: 1rem;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+	margin-bottom: 1.5rem;
 	box-shadow: 0px 10px 15px #bbb;
 }
 
 #payment:active{
 	cursor: pointer;
 	background-color: mediumpurple;
+}
+
+#cancel:active{
+	cursor: pointer;
+	color: black;
 }
 
 #main{
@@ -79,6 +85,17 @@ section{
 
 .plan img{
 	padding-right: 1rem;
+}
+
+.plan a{
+	font-weight: bold;
+	color: hsl(245, 75%, 52%);
+}
+
+.plan a:active{
+	cursor: pointer;
+	color: mediumpurple;
+	text-decoration: none;
 }
 
 .text *{
