--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	background-color: hsl(225, 100%, 94%);
 	text-align: center;
 	font-size: 16px;
-	font-family: 'Red Hat Display', 'Courier New', Courier, monospace;
+	font-family: 'Red Hat Display', sans-serif;
 }
 
 main{
